1. Analyze backtest is now highlighted when the first backtest is launched 2. Added button to launch full-detail of backtest after completion instead routing automatically 3. Added support for unfollowing a thread from email notification 4. Changed post reply response. Now, only a success message is relayed back and not all replies

--- a/src/components/common/backtest/aq-backtest-detail-item.html
+++ b/src/components/common/backtest/aq-backtest-detail-item.html
@@ -138,7 +138,8 @@
             		<aq-backtest-header-item
                         heading="[[heading]]"
             			forced-semi-wide = "[[forcedSemiWide]]"
-            			header-items="{{backtestHeader}}" 
+            			header-items="{{backtestHeader}}"
+                        full-detail="[[fullDetail]]"
                         can-share="[[isSharingAllowed(canShare, active)]]"
                         can-clone="[[isCloningAllowed(canClone, active)]]">
             		</aq-backtest-header-item>
@@ -625,8 +626,9 @@
 
                 if(this.showFull) {
                     this.active = false;
-                    this.reset();
-                    this.requestStaticData();
+                    this.fullDetail = true;
+                    //this.reset();
+                    //this.requestStaticData();
                 }
             },
 
@@ -699,6 +701,7 @@
         
                 if (this.backtest.status == "active") {
                     this.active = true;
+
                     return;
                 }
 
