--- a/src/components/editor/aq-editor-toolbar.html
+++ b/src/components/editor/aq-editor-toolbar.html
@@ -463,6 +463,7 @@
             },
 
             onBacktestStarted: function(e) {
+                this.numBacktests =  this.numBacktests ? this.numBacktests + 1 : 1;
                 this.backtestId = e.detail.id
                 this.pctCompleted = 0;
             },
