Added message for browser support

--- a/src/components/community/aq-community-postdetail.html
+++ b/src/components/community/aq-community-postdetail.html
@@ -303,9 +303,9 @@
         
         var reply = e.detail.reply;
         this.push('replies', reply);
-        var replies = this.replies;
-        this.replies = [];
-        this.replies = replies;
+        //var replies = this.replies;
+        //this.replies = [];
+        //this.replies = replies;
 
         this.$$("#replyEditor").clearEditor();
       },
