--- a/src/components/aq-google-analytics.html
+++ b/src/components/aq-google-analytics.html
@@ -1,21 +1,40 @@
-<script>
-  document.registerElement('my-ga', {
-   prototype: {
-     __proto__: HTMLElement.prototype,
-     attributeChangedCallback: function() {
-       var key = this.getAttribute('key');
-       if(!key) return;
-       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-       m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-       })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-       ga('create', key, 'auto');
-       ga('send', 'pageview');
-       window.addEventListener('location-changed', function() {
-         ga('set', 'page', window.location.pathname);
-         ga('send', 'pageview');
-       });
-     }
-   }
- });
-</script>
+<link rel="import" href="../../bower_components/app-route/app-route.html">
+<link rel="import" href="../../bower_components/app-route/app-location.html">
+
+<dom-module id='aq-google-analytics'>
+
+  <template>
+      <app-location route="{{route}}" 
+          use-hash-as-path 
+          on-path-changed='onChangePath'>
+      </app-location>
+  </template>
+
+  <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+    
+    Polymer({
+        is: 'aq-google-analytics',
+        
+        properties: {
+            key: {
+                type: String
+            },
+        },
+
+        attached: function() {
+            var key = new Polymer.IronMetaQuery({key: 'gaKey'}).value;
+            ga('create', key, 'auto');
+            ga('send', 'pageview'); 
+        },
+
+        onChangePath: function(e) {
+            ga('set', 'page', window.location.href);
+            ga('send', 'pageview');
+        },
+    });
+  </script>
+</dom-module>
