Added change to tags persistence (in create post) and gap between the tags in the post-detail/preview/header

--- a/src/components/community/aq-community-createpost.html
+++ b/src/components/community/aq-community-createpost.html
@@ -185,6 +185,10 @@
             box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);
         }
 
+        aq-tag-element {
+            margin-right: 3px;
+        }
+
     </style>
 
     <template>
@@ -360,6 +364,7 @@
               this.currentPath = [];
               currentPath.push({text:"Create a Post"});
               this.currentPath = currentPath;
+              this.tags = [];
 
             },
 
