--- a/src/components/community/aq-community-postdetail-header.html
+++ b/src/components/community/aq-community-postdetail-header.html
@@ -138,7 +138,11 @@
             color: white;
             background-color: teal;
             --border-color: 1px solid teal;
-        }   
+        } 
+
+        aq-tag-element {
+            margin-right: 3px;
+        }  
 
     </style>
 
