--- a/src/components/community/aq-community-previewpost.html
+++ b/src/components/community/aq-community-previewpost.html
@@ -81,7 +81,7 @@
 
                 currentPath: {
                     type: Array,
-                    value: [{text:"Home", route:"/dashboard"}, {text:"Community", route:"/dashboard/community"}, {text:"Preview Post"}],
+                    value: [{text:"Community", route:"/dashboard/community"}, {text:"Preview Post"}],
                 },
             },
 
