Changed tag size on community home screen Replies are now separate cards

--- a/src/components/community/aq-community-home-post-item2.html
+++ b/src/components/community/aq-community-home-post-item2.html
@@ -59,8 +59,8 @@
                 padding: 0;
                 margin-top: 10px;
                 margin-bottom: 10px;
-                font-size: 14px;
-                color: #3c3c3c;
+                font-size: 0.8em;
+                color: #919191;
             }
 
             .bar {
