Added margin between tag elements

--- a/src/components/community/aq-community-home-post-item2.html
+++ b/src/components/community/aq-community-home-post-item2.html
@@ -86,18 +86,6 @@
                 top: 5px;
             }
 
-            .lower-container .left-part {
-                display: flex;
-                flex-direction: row;
-                align-items: center;
-            }
-
-            .lower-container .right-part {
-                display: flex;
-                justify-content: space-between;
-                align-items: center;
-            }
-
             .right-part[wide-layout] {
                 @apply(--layout-horizontal);
             }
@@ -163,6 +151,10 @@
                 margin-top: 5px;
                 color: #3c3c3c;
                 --color: #cc6666;
+            }
+
+            aq-tag-element {
+                margin-right: 3px;
             }
         </style>
 
